<resources>
    <string name="app_name">DonationTracker</string>
    <string name="title_activity_map">Map</string>
    <string name="log_out">Log Out</string>
    <string name="view_locations">View Locations</string>
    <string name="item_search">Item Search</string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="locations">Locations</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="location_colon">Location:</string>
    <string name="category_colon">Category:</string>
    <string name="items">Items</string>
    <string name="item_details">Item Details</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="colon">:</string>
    <string name="slash">/</string>
    <string name="time_and_date_month_day_year_donated">Time and Date (Month/Day/Year) Donated:</string>
    <string name="brief_item_description">Brief Item Description:</string>
    <string name="full_item_description">Full Item Description:</string>
    <string name="value">Value:</string>
    <string name="cashMoney">$</string>
    <string name="comments_optional">Comments (optional):</string>
    <string name="Add_Item">Add Item</string>
    <string name="Cancel">Cancel</string>
    <string name="Log_In">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="detailed_view">Detailed View</string>
    <string name="view_items">View Items</string>
    <string name="add_item">Add Item</string>
    <string name="please_enter_a_username">Please enter a username</string>
    <string name="welcome_to_donation_tracker">Welcome To Donation Tracker</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="try_again">Try Again</string>
    <string name="bad_login_attempt">Bad login attempt.</string>
    <string name="please_try_again">Please Try Again.</string>
    <string name="enter_item_info">Please Enter Item Information Below</string>
</resources>
