<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="368dp"
        android:layout_height="535dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryForSearch">

        <!--suppress CheckTagEmptyBody -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="417dp"
                android:visibility="visible">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/EnterSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="74dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/LocationForSearch"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="101dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/CategoryForSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextFieldLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextFieldLocation"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/locations"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/LocationForSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/CategoryForSearch"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="101dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/LocationForSearch" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="85dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/category_colon"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toStartOf="@+id/CategoryForSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextFieldLocation" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="textFilter"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toStartOf="@+id/EnterSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryForSearch" />
</android.support.constraint.ConstraintLayout>